# Global-Illumination

./: .gitignore  Global Illumination.sln  README.md
Global Illumination/: AccelerationStructure.cpp  AccelerationStructure.h  AmbientOcclusion.cpp  AmbientOcclusion.h  Attachment.cpp  Attachment.h  Bloom.cpp  Bloom.h  Blur.cpp  Blur.h  BottomLevelASGenerator.cpp  BottomLevelASGenerator.h  CMakeLists.txt  Camera.cpp  Camera.h  CascadedShadowMapping.cpp  CascadedShadowMapping.h  Command.cpp  Command.h  CommandPool.cpp  CommandPool.h  ComputePass.cpp  ComputePass.h  DepthOfField.cpp  DepthOfField.h  DepthPass.cpp  DepthPass.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetGenerator.cpp  DescriptorSetGenerator.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GBuffer.cpp  GBuffer.h  GameManager.cpp  GameManager.h  Global Illumination.filters  (+92 more)
Global Illumination/Models/: Sponza_Floor_normal.tga  Sponza_Floor_roughness.tga
Global Illumination/Shaders/: BasicFrag.spv  BasicVert.spv  TextFrag.spv  TextVert.spv  brdfLUT.frag  convolution.frag  cubemapCreation.frag  frag.spv  fragBrdfLUT.spv  fragConvolution.spv  fragCubemapCreation.spv  fragPBR.spv  fragReflectionConvolution.spv  fragSkybox.spv  fragSphere.spv  reflectionConvolution.frag  reflectionConvolution.vert  shader.frag  shader.vert  shaderSphere.frag  shaderSphere.vert  skybox.frag  skybox.vert  vert.spv  vertPBR.spv  vertReflectionConvolution.spv  vertSkybox.spv  vertSphere.spv
Global Illumination/Shaders/Repository/: RenderShader.frag  RenderShader.vert
Global Illumination/Shaders/ambientOcclusion/: compSSAO.spv  compSSAOMS.spv  compile.bat  ssao.comp  ssaoMS.comp
Global Illumination/Shaders/bloom/: compile.bat  extractHighValues.comp  extractHighValues.spv  merge.comp  merge.spv
Global Illumination/Shaders/blur/: compile.bat  horizontal.comp  horizontal.spv  horizontal32.comp  horizontal32.spv  horizontalShadowMask.comp  horizontalShadowMask.spv  vertical.comp  vertical.spv  vertical32.comp  vertical32.spv  verticalShadowMask.comp  verticalShadowMask.spv
Global Illumination/Shaders/cascadedShadowMapping/: frag.spv  shader.frag  shader.vert  vert.spv
Global Illumination/Shaders/compute/: comp.spv  compMS.spv  compile.bat  shader.comp  shaderMultisampling.comp
Global Illumination/Shaders/gbuffer/: frag.spv  shader.frag  shader.vert  vert.spv
Global Illumination/Shaders/hud/: compile.bat  quad.frag  quad.vert  quadFrag.spv  quadVert.spv  text.frag  text.vert  textFrag.spv  textMenuItems.frag  textMenuItems.vert  textMenuItemsFrag.spv  textMenuItemsVert.spv  textVert.spv
Global Illumination/Shaders/loading/: compile.bat  fullScreenQuad.frag  fullScreenQuad.vert  fullScreenQuadFragment.spv  fullScreenQuadVertex.spv  logoQuad.frag  logoQuad.vert  logoQuadFragment.spv  logoQuadVertex.spv  quad.frag  quadFragment.spv  quadVertex.spv
Global Illumination/Shaders/menuFullQuad/: frag.spv  shader.frag  shader.vert
Global Illumination/Shaders/menuItemQuad/: frag.spv  shader.frag  shader.vert  vert.spv
Global Illumination/Shaders/menuOptionImageQuad/: frag.spv  shader.frag  shader.vert  vert.spv
Global Illumination/Shaders/offscreenShadowMap/: compileOffscreenShadowMap.bat  offscreenShadowMap.vert  vert.spv
Global Illumination/Shaders/pbr_csm_radiosity_probes/: frag.spv  shader.frag  vert.spv
Global Illumination/Shaders/pbr_csm_radiosity_probes_rsm/: frag.spv  shader.frag  shader.vert  vert.spv
Global Illumination/Shaders/pbr_csm_textured/: frag.spv  (+4 more)
(+166 files in other folders)
